[#254] java.lang.Boolean constructor is deprecated (#255)
* [#254] java.lang.Boolean constructor is deprecated

* Replaced all occurences of ```Boolean(boolean)``` with
```valueOf(boolean)```
* Replaced all other constructors of primitive wrappers
* simplified some assignments